--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,63 +4,62 @@
     box-sizing: border-box;
 } */
 
-.header{
-    display: flex;
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    justify-content: space-between;
-    align-items: center;
+.header {
+  align-items: center;
+  background-color: black;
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  width: 100%;
 }
 
-.title{
-    display: flex;
-    justify-content: flex-start;
-    /* color: white; */
-    margin-left: 5%;
+.title {
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 5%;
 }
 
-nav{
-    width: 30px;
-    height: 30px;
-    background-color: white;
-    align-items: flex-end;
-    border-radius: 50%;
-    padding: 2px;
-    border: solid 3px black;
-    margin-right: 5%
+nav {
+  align-items: flex-end;
+  background-color: white;
+  border: solid 3px black;
+  border-radius: 50%;
+  height: 30px;
+  margin-right: 5%;
+  padding: 2px;
+  width: 30px;
 }
 
 
-.divQuantity{
-    position: relative;
+.divQuantity {
+  position: relative;
 }
 
-img{
-    height: 100%;
-    width: 100%;
+img {
+  height: 100%;
+  width: 100%;
 }
 
-.quantity{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: rgb(204, 164, 61);
-    border: none;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    right: -8px;
-    top: -8px;
+.quantity {
+  align-items: center;
+  background-color: rgb(204, 164, 61);
+  border: none;
+  border-radius: 50%;
+  display: flex;
+  height: 20px;
+  justify-content: center;
+  position: absolute;
+  right: -8px;
+  top: -8px;
+  width: 20px;
 }
 
-.link{
-    text-decoration: none;
-    color: white;
-    font-family: 'Press Start 2P', cursive;
+.link {
+  color: white;
+  font-family: 'Press Start 2P' , cursive;
+  text-decoration: none;
 }
 
-.link:hover{
-    color: rgb(204, 164, 61);
+.link:hover {
+  color: rgb(204, 164, 61);
 }
