--- a/src/css/categories.css
+++ b/src/css/categories.css
@@ -1,14 +1,14 @@
 .categories-component-container {
   align-items: center;
   background-color: rgb(0, 0, 0, 0.4);
+  border: solid 5px rgb(218, 165, 32, 0.8);
+  border-radius: 10px;
   color: rgba(255, 255, 255, 0.8);
   display: flex;
   flex-flow: column nowrap;
   height: 100%;
   justify-content: center;
   width: 100%;
-  border: solid 5px rgb(218, 165, 32, 0.8);
-  border-radius: 10px;
 }
 
 .categories-header2-container {
@@ -17,12 +17,11 @@
 
 .categories-container {
   align-items: center;
+  border: solid 5px rgb(218, 165, 32, 0.4);
   display: flex;
   height: 415%;
   justify-content: flex-start;
-  align-items: center;
   width: 100%;
-  border: solid 5px rgb(218, 165, 32, 0.4);
 }
 
 .categories-list {
@@ -35,13 +34,13 @@
 .category-button {
   background-color: inherit;
   border: none;
-  font-size: 1.0em;
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 1em;
   height: 20px;
   min-width: fit-content;
   outline: none;
   text-align: left;
   width: 100%;
-  color: rgba(255, 255, 255, 0.8);;
 }
 
 .category-button:hover {
